...
        BaseTextField(
            value = viewModel.userName.value,
            singleLine = true,
            modifier = Modifier
                .fillMaxWidth()
                .padding(bottom = 8.dp)
                .testTag("userNameField"),
            onValueChange = { viewModel.updateUserName(it) },
            label = { Text(stringResource(R.string.userName)) },
            keyboardOptions = KeyboardOptions.Default.copy(
                imeAction = ImeAction.Next
            ),
        )
...
        )
        PasscodeTextField(
            value = viewModel.userPasscode.value,
            modifier = Modifier
                .fillMaxWidth()
                .padding(bottom = 8.dp)
                .testTag("passcodeField"),
            onPasscodeChange = { viewModel.updateUserPasscode(it) }
        )
        BaseButton(
            onClick = {
                if (viewModel.isUserValid()) {
                    viewModel.createUser()
...
