<resources>
    <string name="app_name">Jourly App</string>
    <string name="journal">Journal</string>
    <string name="profile">Profile</string>
    <string name="report">Report</string>
    <string name="challenges" translatable="false">Challenges</string>
    <string name="welcomeText">Welcome to Jourly</string>
    <string name="userNameLabel">How should we call you?</string>
    <string name="userName">Your Nickname</string>
    <string name="passcodeLabel">Enter an optional passcode to lock the app</string>
    <string name="passcode">Passcode</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="quickEntryQuestion">What is your mood today?</string>
    <string name="deleteEntryQuestion">Do you want to permanently delete the following entry?</string>
</resources>